--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ deep-sort-realtime==1.3.2
 filelock==3.19.1
 fonttools==4.60.1
 fsspec==2025.9.0
+git-filter-repo==2.47.0
 idna==3.10
 Jinja2==3.1.6
 kiwisolver==1.4.9
@@ -16,12 +17,14 @@ networkx==3.5
 numpy==2.2.6
 opencv-python==4.12.0.88
 packaging==25.0
+pandas==2.3.3
 pillow==11.3.0
 polars==1.34.0
 polars-runtime-32==1.34.0
 psutil==7.1.0
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
 scipy==1.16.2
@@ -30,6 +33,7 @@ sympy==1.14.0
 torch==2.8.0
 torchvision==0.23.0
 typing_extensions==4.15.0
+tzdata==2025.2
 ultralytics==8.3.204
 ultralytics-thop==2.0.17
 urllib3==2.5.0
