--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==25.4.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 contourpy==1.3.3
@@ -7,34 +8,50 @@ filelock==3.19.1
 fonttools==4.60.1
 fsspec==2025.9.0
 git-filter-repo==2.47.0
+h11==0.16.0
 idna==3.10
+isodate==0.7.2
 Jinja2==3.1.6
+joblib==1.5.2
 kiwisolver==1.4.9
+lxml==6.0.2
 MarkupSafe==3.0.3
 matplotlib==3.10.6
 mpmath==1.3.0
 networkx==3.5
 numpy==2.2.6
 opencv-python==4.12.0.88
+outcome==1.3.0.post0
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
 polars==1.34.0
 polars-runtime-32==1.34.0
 psutil==7.1.0
+pycountry==24.6.1
+pycryptodome==3.23.0
 pyparsing==3.2.5
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
+scikit-learn==1.7.2
 scipy==1.16.2
 six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+streamlink==7.6.0
 sympy==1.14.0
+threadpoolctl==3.6.0
 torch==2.8.0
 torchvision==0.23.0
+trio==0.31.0
+trio-websocket==0.12.2
 typing_extensions==4.15.0
 tzdata==2025.2
 ultralytics==8.3.204
 ultralytics-thop==2.0.17
 urllib3==2.5.0
-yt-dlp==2025.10.14
+websocket-client==1.9.0
+wsproto==1.2.0
